fix pa ui gabz, modularize pa nato ni pd ang app.js wa pa na remove ang redundants

--- a/klema/.env
+++ b/klema/.env
@@ -6,10 +6,10 @@ APP_URL=http://localhost
 
 DB_CONNECTION=postgresql
 DB_HOST=127.0.0.1
-DB_PORT=5433
+DB_PORT=5432
 DB_DATABASE=klema
 DB_USERNAME=postgres
-DB_PASSWORD=Jangabs2003
+DB_PASSWORD=dengue43
 
 OPENWEATHER_API_KEY=42fd1052b23ee1f0ad1fe09ac2357b41
 OPENWEATHER_BASE_URL=https://api.openweathermap.org/data/2.5
